--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '3.5'
 services:
   app:
     build: .
-    container_name: vite-react
-    command: yarn dev
+    container_name: vite
     image: vite
     ports:
-      - '5173:5173'
+      - '5173:80'
     volumes:
       - .:/app
